# ydiskhelper

./: .dockerignore  .gitignore  README.md  README.ru.md  Taskfile.yaml  compose.demo.yaml  compose.yaml  env.example  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
docker/: Dockerfile  entrypoint.sh
ydiskhelper/: asgi.py  settings.py  urls.py  wsgi.py
ydiskhelper/static/favicon/: site.webmanifest
ydiskhelper/ydisk/: apps.py  oauth_views.py  services.py  views.py
ydiskhelper/ydisk/templates/: base.html  favicon.html
ydiskhelper/ydisk/templates/ydisk/: file_list.html  public_link.html
ydiskhelper/ydisk/templates/ydisk/components/: oauth_button.html
